# uo

./: .gitignore  AI_CORE_ARCHITECTURE.md  README.md  STUDY_GUIDE.md
ServUO/: .gitignore  CLAUDE.md  MIGRATION_CORE_CLASSIFICATION.md  MIGRATION_CORE_DIFF_REPORT.md  QUICK_BUILD.md  README.md  ServUO.exe.config  ServUO.sln  UO_ARCHITECT_CLIENT_GUIDE.md  UO_ARCHITECT_SETUP.md  VYSTIA_SPELLBOOK_INTEGRATION_GUIDE.md  _makedebug  _makerelease  build-and-copy.ps1  build_output.txt
Vystia/: CLASS_SPAWN_WEAPONS.md  PROPOSED_CLASS_EQUIPMENT.md  README.md  SYSTEM_INVENTORY.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  TEST_SUITE.md  VYSTIA_MASTER_INVENTORY.md  VYSTIA_MASTER_INVENTORY.md.backup  VYSTIA_SHARD_OVERVIEW.md  reagent_audit_report.txt
Vystia/tools/dynamorio_aes/: CMakeLists.txt  aes_key_extractor.cpp
VystiaTerrainGeneration/: VystiaTiles.xml  VystiaWorldGeneratorV3.cs
VystiaTownDeployment/: QUICK_START_WALLS.md  README.md  analyze_wall_area.py  britannia_stone_wall.py  britannia_stone_wall_lib.py  castle.json  check_backup_headers.py  check_building_tiles.py  check_tile_data.py  clean_place_multi.py  compare_map_blocks.py  compare_osi_to_felucca.py  compare_t2a_to_servuo.py  convert_json_to_centred_blueprint.py  copy_map6_to_map9.py  delete_map_area.py  delete_signposts_from_world.py  deploy_britain_correct.py  deploy_britain_terrain_mapped.py  deploy_exact_building.py  deploy_magincia.py  diagnose_deletion_area.py  example_generate_walls.py  export_to_blueprint.py  extract_and_place_britain.py  extract_and_place_deepforge.py  extract_britain_blueprint.py  (+22 more)
(+2694 files in other folders)
